--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@web3modal/ethereum": "^2.2.2",
+    "@web3modal/react": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "wagmi": "^0.12.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -51,7 +54,7 @@
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "chai": "^4.2.0",
-    "ethers": "^5.4.7",
+    "ethers": "^5",
     "hardhat": "^2.13.0",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
