--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "@testing-library/user-event": "^13.2.1",
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/react": "^2.2.2",
-    "draft-convert": "^2.1.13",
-    "draft-js": "^0.11.7",
+    "framer-motion": "^10.9.2",
     "hardhat-waffle": "^0.0.1-security",
     "immutable": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draft-wysiwyg": "^1.15.0",
     "react-hooks-global-state": "^2.1.0",
+    "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "wagmi": "^0.12.6",
