--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.9.2",
     "hardhat-waffle": "^0.0.1-security",
     "immutable": "^4.3.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
